# Rust_Group6

./: Cargo.toml  README.md  git_log.txt
.my-dvcs/: .tracked_files  head
.my-dvcs/branches/: master  new_branch
.my-dvcs/logs/: log.txt
src/: ErrorHandling.rs  checkout.rs  clone.rs  commit.rs  diff.rs  directory.rs  hashed.rs  init.rs  interface.rs  jam.rs  log.rs  main.rs  merge.rs  mod.rs  permission.rs  pull_push.rs  staging.rs  status.rs
src/ErrorHandling/: Cargo.toml  ErrorHandling.rs
src/ErrorHandling/src/: lib  lib.rs
src/behavior_hiding/: interface.rs  main.rs
src/diff/: diff.rs
src/errorhandling/: error_handling.rs  errorhandling.rs  mod.rs
src/file_management/: commit.rs  directory.rs  hash.rs
src/init/: Cargo.toml  init.rs
src/init/src/: lib.rs
src/initialization/: clone.rs  init.rs  mod.rs
src/inter-repo interaction/: pull_push.rs
src/inter-repository_Interaction/: Cargo.toml  inter-repository_Interaction.rs
src/inter-repository_Interaction/src/: inter-repository_Interaction.rs
src/inter_repo_interaction/: mod.rs  pull_push.rs
src/inter_repo_interactions/: pull_push.rs
src/interface/: io.rs  mod.rs  permissions.rs
src/permission/: Cargo.toml  permission.rs
src/revisions/: log.rs  mod.rs  staging.rs  status.rs
src/staging/: Cargo.toml  staging.rs
src/staging/src/: staging.rs
src/state_management/: branch.rs  checkout.rs  merge.rs  mod.rs
src/status/: main.rs  staging.rs  status.rs
src/status_check/: Cargo.toml  github_commits.txt  log.rs  mod.rs  status.rs  status_check.rs
src/status_check/src/: lib.rs
src/tracking/: diff.rs
src/view/: cat.rs
test/.my-dvcs/: head
test/chigen/: inner-chigen.txt
test/idk/: something.txt
