[package]
name = "dvcs-experimental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha256 = "1.4.0"
fs_extra = "1.2"

[[bin]]
name = "dvcs"
path = "src/main.rs"