[package]
name = "dvcs-experimental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.108", features = ["derive"] }
chrono = "0.4"
sha256 = "1.4.0"
reqwest = { version = "0.11.22", features = ["json"] }
tempfile = "3.3.0"
serde_json = "1.0.1"
tokio = { version = "1.34.0", features = ["full"] }
regex = "1.10.2"
fs_extra = "1.2"

[[bin]]
name = "dvcs"
path = "src/main.rs"