[package]
name = "Final_staus_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.108"
serde_json = "1.0.1"
tokio = { version = "1.34.0", features = ["full"] }
regex = "1.10.2"


[[bin]]
name = "Final_staus_check"
path = "src/lib.rs"